force-app/main/default/objects/copado__Custom_Connected_App_Info__c/copado__Custom_Connected_App_Info__c.object-meta.xml
<CustomObject>
    <description>A mechanism for customers to create their own Connected Apps, and reference them for each Org Credential that would be authenticated against the custom connected app versus the central, Copado Connected App.</description>
    <label>Custom Connected App</label>
    <nameField>
        <label>Custom Connected App Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Connected Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>