force-app/main/default/objects/copado__Custom_Connected_App_Info__c/fields/copado__Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>copado__Callback_URL__c</fullName>
    <label>Callback URL</label>
    <type>Url</type>
</CustomField>