force-app/main/default/objects/copado__Custom_Connected_App_Info__c/fields/copado__ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>copado__ClientSecret__c</fullName>
    <label>Client Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>