force-app/main/default/objects/copado__Custom_Connected_App_Info__c/fields/copado__Connected_App_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Connected_App_Id__c</fullName>
    <label>Connected App Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>